--- a/new-york/Cargo.toml
+++ b/new-york/Cargo.toml
@@ -22,3 +22,6 @@ sha2 = "0.10.8"
 serde = {workspace=true}
 reqwest = {workspace=true}
 urlencoding = "2.1.3"
+blake2 = "0.10.6"
+tokio = {version="1", features=["full"]}
+warp = "0.3.7"
