--- a/new-york/Cargo.toml
+++ b/new-york/Cargo.toml
@@ -10,7 +10,7 @@ hex = "0.4"
 async-trait = {workspace=true}
 serde_json = "1"
 stellar-strkey = "0.0.8"
-x25519-dalek = {version="2.0.1", features=["getrandom"]}
+x25519-dalek = {version="2.0.1", features=["getrandom", "static_secrets"]}
 ed25519-dalek = "2.1.1"
 aes-gcm = "0.10.3"
 stellar-xdr = { version = "=22.0.0-rc.1.1", default-features = false, features = [
@@ -25,3 +25,4 @@ urlencoding = "2.1.3"
 blake2 = "0.10.6"
 tokio = {version="1", features=["full"]}
 warp = "0.3.7"
+base64 = "0.22.1"
