--- a/dstack-core/Cargo.toml
+++ b/dstack-core/Cargo.toml
@@ -8,4 +8,4 @@ anyhow = {workspace=true}
 warp = "0.3.7"
 serde = {workspace=true}
 async-trait = {workspace=true}
-serde_json = "1"
+serde_json = {workspace=true}
