--- a/new-york/Cargo.toml
+++ b/new-york/Cargo.toml
@@ -6,23 +6,30 @@ edition = "2021"
 [dependencies]
 dstack-core = {workspace=true}
 anyhow = {workspace=true}
-hex = "0.4"
+hex = {workspace=true}
 async-trait = {workspace=true}
-serde_json = "1"
+serde_json = {workspace=true}
+sha2 = {workspace=true}
+serde = {workspace=true}
+reqwest = {workspace=true}
+base64 = {workspace=true}
+aes-gcm = {workspace=true}
+x25519-dalek = {workspace=true}
 stellar-strkey = "0.0.8"
-x25519-dalek = {version="2.0.1", features=["getrandom", "static_secrets"]}
 ed25519-dalek = "2.1.1"
-aes-gcm = "0.10.3"
 stellar-xdr = { version = "=22.0.0-rc.1.1", default-features = false, features = [
     "curr",
     "serde",
     "base64",
 ] }
-sha2 = "0.10.8"
-serde = {workspace=true}
-reqwest = {workspace=true}
 urlencoding = "2.1.3"
 blake2 = "0.10.6"
 tokio = {version="1", features=["full"]}
 warp = "0.3.7"
-base64 = "0.22.1"
+
+# Helper objects
+dummy-attestation = {workspace=true}
+diffie-hellman = {workspace=true}
+
+[dev-dependencies]
+dcap-quotes = {workspace=true}
