--- a/services/stellar/zephyr/Cargo.toml
+++ b/services/stellar/zephyr/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-zephyr-sdk = { version = "0.2.4", git="https://github.com/xycloo/rs-zephyr-toolkit", rev="5d26be0" }
+zephyr-sdk = { version = "0.2.4", git="https://github.com/xycloo/rs-zephyr-toolkit", rev="3054505" }
+#zephyr-sdk = { path = "../../../../../rs-zephyr-sdk/zephyr-sdk" }
 stellar-strkey = "0.0.8"
 serde = {version="1", features=["derive"]}
 
