prepare for running pod

--- a/new-york/Dockerfile
+++ b/new-york/Dockerfile
@@ -1,4 +1,4 @@
-# ./examples/ping-host/Dockerfile
+# ./new-york/Dockerfile
 FROM rust:latest AS builder
 
 # Set the working directory
@@ -8,22 +8,18 @@ WORKDIR /usr/src/app
 RUN apt-get update && \
     apt-get install -y pkg-config libssl-dev && \
     rm -rf /var/lib/apt/lists/*
-RUN apt-get update && apt-get install -y libssl3 && apt-get clean
 
 # Copy the entire workspace into the container
-COPY . . 
+COPY ../../ . 
 
-# Navigate to the workspace root and build the specific crate
-WORKDIR /usr/src/app/examples/ping-host
+# Navigate to the specific crate directory and build
+WORKDIR /usr/src/app/new-york
 RUN cargo build --release
 
 # Final runtime image
 FROM debian:bookworm-slim
-
 RUN apt-get update && apt-get install -y libssl3 && apt-get clean
 
-# Copy the binary from the builder stage
-COPY --from=builder /usr/src/app/target/release/ping_host /usr/local/bin/ping-host
 
-# Set the entrypoint
-CMD ["ping-host"]
+COPY --from=builder /usr/src/app/target/release/guest /usr/local/bin/guest
+CMD ["guest"]
