--- a/examples/ping-host/Dockerfile
+++ b/examples/ping-host/Dockerfile
@@ -15,8 +15,7 @@ COPY . .
 
 # Navigate to the workspace root and build the specific crate
 WORKDIR /usr/src/app/examples/ping-host
-rustup target add x86_64-unknown-linux-gnu
-RUN cargo build --release --target=x86_64-unknown-linux-gnu
+RUN cargo build --release
 
 # Final runtime image
 FROM debian:bookworm-slim
