--- a/crates/tdx-attestation/Cargo.toml
+++ b/crates/tdx-attestation/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = {workspace=true}
 hex = {workspace=true}
 sha2 = {workspace=true}
 tdx-attest = {path="../attestation-driver/tdx-attest", optional=true}
-tsm-client = {path="../../../rs-tsm-quote-generation/client", optional=true}
+tsm-client = {workspace=true, optional=true}
 dcap-qvl = "0.1.6"
 
 [features]
